# obe-mdn-anki

./: .pre-commit-config.yaml  README.md  obe-mdn-101.apkg  pyproject.toml
data/: card-data.csv
obe-mdn-anki/: utils.py
obe_mdn_anki/: generate_deck.py  models.py  utils.py
templates/: read.yaml  speak.yaml  style.css
tests/: test_pinyin.py
