[project]
name = "obe_mdn_anki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "genanki>=0.13.1",
    "polars>=1.29.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
